--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,17 +64,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Gotham
-      fonts:
-        - asset: assets/fonts/GothamBold.ttf
-        - asset: assets/fonts/GothamBoldItalic.ttf
-        - asset: assets/fonts/GothamBook.ttf
-        - asset: assets/fonts/GothamBookItalic.ttf
-        - asset: assets/fonts/GothamLight.ttf
-        - asset: assets/fonts/GothamLightItalic.ttf
-        - asset: assets/fonts/GothamMedium.ttf
-        - asset: assets/fonts/GothamMediumItalic.ttf
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
